# uw-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
scripts/: discover_api.py
src/uw_api/: __init__.py  auth.py  client.py  exceptions.py
src/uw_api/graphql/: __init__.py  queries.py
src/uw_api/models/: __init__.py  account.py  bill.py  energy.py  meter.py
src/uw_api/pdf/: extractor.py
tests/: conftest.py  test_bills.py  test_client.py  test_models.py
