[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uw-api"
version = "0.2.1"
description = "Async Python client for the Utility Warehouse customer portal API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Kieran", email = "kieran@example.com" },
]
keywords = ["utility-warehouse", "energy", "home-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pdfplumber>=0.11.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.16.0",
    "mypy>=2.3.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP",
    "B", "C4", "SIM", "RUF",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/uw_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
